changed name to sftp resource file to match classname

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHSFTPSamplerExtraResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHSFTPSamplerExtraResources.properties
@@ -12,7 +12,7 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH SFTP
+displayName=SSH SFTP JF
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -41,3 +41,8 @@ user.displayName=Login
 keyFile.displayName=Client certificate
 printFile.displayName=Print file content
 printFile.shortDescription=Reads the file and show the text in the result
+connectionManagement.displayName=Connection Management
+closeConnection.displayName=Close connection after sampler end
+tunnels.displayName=Set up tunnels
+connectionName.displayName=Connection name
+sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
