--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
@@ -12,7 +12,7 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Persistent Named Shell JF
+displayName=SSH Open Persistent Named Shell JF
 connectionManagement.displayName=Connection Management
 connectionName.displayName=Connection Name
 shellName.displayName=Persistent Shell Name
