corrected prompt strippen and labels on persistent connection

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
@@ -16,3 +16,6 @@ displayName=SSH Open Persistent Named Shell JF
 connectionManagement.displayName=Connection Management
 connectionName.displayName=Connection Name
 shellName.displayName=Persistent Shell Name
+stripCommand.displayName=Strip Command 
+stripPrompt.displayName=Strip Prompt
+encoding.displayName=Character Encoding
