--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
@@ -18,3 +18,6 @@ connectionName.displayName=Connection Name
 shellName.displayName=Persistent Shell Name
 command.displayName=Command
 useTty.displayName=Use Tty
+stripCommand.displayName=Strip Command 
+stripPrompt.displayName=Strip Prompt
+encoding.displayName=Character Encoding
