corrections to test procedures persistent shell

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
@@ -18,4 +18,5 @@ connectionName.displayName=Connection Name
 shellName.displayName=Persistent Shell Name
 stripCommand.displayName=Strip Command 
 stripPrompt.displayName=Strip Prompt
-encoding.displayName=Character Encoding
+resultEncoding.displayName=Character Encoding
+resultProcessing.displayName=Sampler Result Handling
