--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
@@ -20,4 +20,5 @@ command.displayName=Command
 useTty.displayName=Use Tty
 stripCommand.displayName=Strip Command 
 stripPrompt.displayName=Strip Prompt
-encoding.displayName=Character Encoding
+resultEncoding.displayName=Character Encoding
+resultProcessing.displayName=Sampler Result Handling
