--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentSFTPChannelSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentSFTPChannelSamplerResources.properties
@@ -12,7 +12,7 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Close Persistent Shell JF
+displayName=SSH Close Persistent SFTP Session JF
 connectionManagement.displayName=Connection Management
 connectionName.displayName=Connection Name
-shellName.displayName=Persistent Shell Name
+sftpSessionName.displayName=Persistent SFTP session Name
