corrections open close sftp sampler

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentSFTPSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentSFTPSamplerResources.properties
@@ -16,7 +16,6 @@ displayName=SSH Open Persistent Named SFTP Session JF
 connectionManagement.displayName=Connection Management
 connectionName.displayName=Connection Name
 sftpSessionName.displayName=Persistent SFTP session Name
-stripCommand.displayName=Strip Command 
-stripPrompt.displayName=Strip Prompt
 resultEncoding.displayName=Character Encoding
 resultProcessing.displayName=Sampler Result Handling
+usePty.dislayName=Use Pty
