--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
@@ -44,6 +44,6 @@ printFile.shortDescription=Reads the file and show the text in the result
 connectionManagement.displayName=Connection Management
 closeConnection.displayName=Close connection after sampler end
 tunnels.displayName=Set up tunnels
-connectionName.displayName=Connection name
+connectionName.displayName=Connection Name
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
 sftpSessionName.displayName=Persistent SFTP session Name
