added dump channels parameter on dump sessions

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/DumpSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/DumpSSHSessionSamplerResources.properties
@@ -16,3 +16,5 @@
 displayName=SSH Dump Sessions JF
 connectionManagement.displayName=Connection Management
 connectionName.displayName=Connection Name
+dumpChannelInfo.displayName=Dump SFTP nad Shell Channels
+dumpParameters.displayName=Dump Parameters
