corrected the resources

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/CloseSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/CloseSSHSessionSamplerResources.properties
@@ -12,6 +12,8 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Close Session JF
+displayName=SSH Close Named Session
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
+connectionManagement.shortDescription=Parameters of the Named SSH connection
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the persistent SSH session to close
