--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/DumpSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/DumpSSHSessionSamplerResources.properties
@@ -13,8 +13,12 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Dump Sessions JF
+displayName=SSH Dump Sessions
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
-dumpChannelInfo.displayName=Dump SFTP nad Shell Channels
+connectionManagement.shortDescription=Parameters of the Named SSH connection
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the persistent SSH connection, leave empty in order to dump all
+dumpChannelInfo.displayName=Dump open SFTP and Shell channel names
+dumpChannelInfo.shortDescription=If true all names of the SFTP and Shell channels opened on the SSH connections are shown in the result
 dumpParameters.displayName=Dump Parameters
+dumpParameters.shortDescription=configure details of how to dump the SSH channels
