--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentSFTPChannelSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentSFTPChannelSamplerResources.properties
@@ -12,7 +12,9 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Close Persistent SFTP Session JF
+displayName=SSH Close Persistent SFTP channel
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
-sftpSessionName.displayName=Persistent SFTP session Name
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the SSH connection to persist if 'Close connection after sampler end' is true
+sftpSessionName.displayName=Persistent SFTP channel Name
+sftpSessionName.displayName=Name of the named SFTP channel on the named persistent SSH session
