--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentShellSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHClosePersistentShellSamplerResources.properties
@@ -12,7 +12,9 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Close Persistent Shell JF
+displayName=SSH Close Persistent Shell channel
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the named persistent SSH session
 shellName.displayName=Persistent Shell Name
+shellName.shortDescription=Name of the persistent Shell channel to close 
