--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHCommandSamplerExtraResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHCommandSamplerExtraResources.properties
@@ -13,7 +13,7 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Command JF
+displayName=SSH Open Named Connection And Send Command On Exec Channel
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -27,7 +27,7 @@ command.shortDescription=Command to execute on the server
 sshkeyfile.displayName=SSH Key File
 sshkeyfile.shortDescription=File that stores your SSH key (id_dsa)
 passphrase.displayName=Passphrase
-passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext)
+passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext) to open the ssh key
 connectionTimeout.displayName=Connection Timeout
 connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 useReturnCode.displayName=Use return code
@@ -36,12 +36,17 @@ useTty.displayName=Use TTY
 useTty.shortDescription=Use TTY when establishing the SSH session
 printStdErr.displayName=Print Standard Error output
 printStdErr.shortDescription=Prints the standard error output in the results
-server.displayName=Server
-user.displayName=Login
-keyFile.displayName=Client certificate
-execute.displayName=Execute
+#server.displayName=Server
+#user.displayName=Login
+#keyFile.displayName=Client certificate
+#execute.displayName=Execute
 connectionManagement.displayName=Connection Management
 closeConnection.displayName=Close connection after sampler end
+closeConnection.shortDescription=If set to true the SSH session is closed after the sampler has finished
 tunnels.displayName=Set up tunnels
-connectionName.displayName=Connection name
+tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH sessions
+connectionName.displayName=SSH Connection name
+connectionName.shortDescription=Name of the SSH session to persist if 'Close connection after sampler end' is true
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
+sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
+
