--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentSFTPSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentSFTPSamplerResources.properties
@@ -12,10 +12,14 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Open Persistent Named SFTP Session JF
+displayName=SSH Open Persistent Named SFTP Channel
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
-sftpSessionName.displayName=Persistent SFTP session Name
-resultEncoding.displayName=Character Encoding
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the persistent SSH connection
+sftpSessionName.displayName=Persistent SFTP channel Name
+sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH connection
 resultProcessing.displayName=Sampler Result Handling
-usePty.dislayName=Use Pty
+resultEncoding.displayName=Character Encoding
+resultEncoding.shortDescription=character encoding of the result e.g. UTF-8
+usePty.displayName=Use Pty
+usePty.shortDescription=Use Pty
