--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
@@ -12,13 +12,20 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Persistent Shell Send Command JF
+displayName=SSH Persistent Shell Channel Send Command
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the persistent SSH session
 shellName.displayName=Persistent Shell Name
+shellName.shortDescription=Name of the persistent Shell channel to send the command on 
 command.displayName=Command
 useTty.displayName=Use Tty
-stripCommand.displayName=Strip Command 
+useTty.shortDescription=Use TTY when establishing the SSH session
+stripCommand.displayName=Strip Command
+stripCommand.shortDescription=If true remove the command sent from the response 
 stripPrompt.displayName=Strip Prompt
+stripPrompt.shortDescription=If true remove the OS prompt from the response
 resultEncoding.displayName=Character Encoding
+resultEncoding.shortDescription=Character encoding with which the server sends the response (e.g UTF-8)
+
 resultProcessing.displayName=Sampler Result Handling
