--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHSFTPSamplerExtraResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHSFTPSamplerExtraResources.properties
@@ -12,7 +12,7 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH SFTP JF
+displayName=SSH Open Named Connection And Action On SFTP Channel
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -26,7 +26,7 @@ source.shortDescription=Source path of the transfer (can be either local or on t
 sshkeyfile.displayName=SSH Key File
 sshkeyfile.shortDescription=File that stores your SSH key (id_dsa)
 passphrase.displayName=Passphrase
-passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext)
+passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext) to open the ssh key
 connectionTimeout.displayName=Connection Timeout
 connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 destination.displayName=Destination path
@@ -36,13 +36,17 @@ action.displayName=Action
 action.shortDescription=Select the SFTP command to send
 get.displayName=GET
 put.displayName=PUT
-server.displayName=Server
-user.displayName=Login
-keyFile.displayName=Client certificate
+#server.displayName=Server
+#user.displayName=Login
+#keyFile.displayName=Client certificate
 printFile.displayName=Print file content
 printFile.shortDescription=Reads the file and show the text in the result
 connectionManagement.displayName=Connection Management
 closeConnection.displayName=Close connection after sampler end
+closeConnection.shortDescription=If set to true the SSH session is closed after the sampler has finished
 tunnels.displayName=Set up tunnels
-connectionName.displayName=Connection name
+tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH sessions
+connectionName.displayName=SSH Connection name
+connectionName.shortDescription=Name of the SSH connection to persist if 'Close connection after sampler end' is true
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
+sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
