--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendCommandSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendCommandSSHSessionSamplerResources.properties
@@ -13,7 +13,9 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Send Command Session JF
+displayName=SSH Send Command Via Exec Channel On Named SSH Session
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the Persistent SSH connection
 command.displayName=Command
+command.shortDescription=Command to execute over the Exec channel on the persistent named SSH connection (do not send commands that require input)
