--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/OpenSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/OpenSSHSessionSamplerResources.properties
@@ -13,7 +13,7 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Open Named Session JF
+displayName=SSH Open Named Connection
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -25,7 +25,7 @@ port.shortDescription=Remote Port on which SSHD is listening
 sshkeyfile.displayName=SSH Key File
 sshkeyfile.shortDescription=File that stores your SSH key (id_dsa)
 passphrase.displayName=Passphrase
-passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext)
+passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext) to open the ssh key
 connectionTimeout.displayName=Connection Timeout
 connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 useReturnCode.displayName=Use return code
@@ -35,11 +35,15 @@ useTty.shortDescription=Use TTY when establishing the SSH session
 printStdErr.displayName=Print Standard Error output
 printStdErr.shortDescription=Prints the standard error output in the results
 server.displayName=Server
-user.displayName=Login
-keyFile.displayName=Client certificate
-execute.displayName=Execute
+#user.displayName=Login
+#keyFile.displayName=Client certificate
+#execute.displayName=Execute
 connectionManagement.displayName=Connection Management
-closeConnection.displayName=Close connection after sampler end
+#closeConnection.displayName=Close connection after sampler end
+#closeConnection.shortDescription=If set to true the SSH connection is closed after the sampler has finished
 tunnels.displayName=Set up tunnels
-connectionName.displayName=Connection name
+tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH connection
+connectionName.displayName=SSH Connection name
+connectionName.shortDescription=Name of the SSH connection to persist
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
+sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
