--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentShellSamplerResources.properties
@@ -12,11 +12,16 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Open Persistent Named Shell JF
+displayName=SSH Open Persistent Named Shell Channel
 connectionManagement.displayName=Connection Management
-connectionName.displayName=Connection Name
-shellName.displayName=Persistent Shell Name
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the persistent SSH session
+shellName.displayName=Persistent Shell Channel Name
+shellName.shortDescription=Name of the persistent Shell channel to close 
 stripCommand.displayName=Strip Command 
+stripCommand.shortDescription=If true remove the command sent from the response
 stripPrompt.displayName=Strip Prompt
+stripPrompt.shortDescription=If true remove the OS prompt from the response
 resultEncoding.displayName=Character Encoding
+resultEncoding.shortDescription=Character encoding with which the server sends the response (e.g UTF-8)
 resultProcessing.displayName=Sampler Result Handling
