--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
@@ -12,7 +12,7 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Send SFTP Command JF
+displayName=SSH Send SFTP Command on Named SFTP channel
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -36,14 +36,19 @@ action.displayName=Action
 action.shortDescription=Select the SFTP command to send
 get.displayName=GET
 put.displayName=PUT
-server.displayName=Server
-user.displayName=Login
-keyFile.displayName=Client certificate
+#server.displayName=Server
+#user.displayName=Login
+#keyFile.displayName=Client certificate
 printFile.displayName=Print file content
 printFile.shortDescription=Reads the file and show the text in the result
 connectionManagement.displayName=Connection Management
 closeConnection.displayName=Close connection after sampler end
 tunnels.displayName=Set up tunnels
-connectionName.displayName=Connection Name
+tunnels.displayName=
+connectionName.displayName=SSH Connection Name
+connectionName.shortDescription=Name of the Persistent SSH connection
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
-sftpSessionName.displayName=Persistent SFTP session Name
+sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
+sftpSessionName.displayName=Persistent SFTP channel Name
+sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH connection
+
