--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
@@ -51,4 +51,11 @@ sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
 sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
 sftpSessionName.displayName=Persistent SFTP channel Name
 sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH connection
-
+fileProperties.displayName=File Properties
+fileProperties.shortDescription=File properties for chon, chgrp, and chmod use integer values only
+permissions.displayName=File Permissions 
+permissions.shortDescription=File Permissions expressed as number
+userId.displayName=User Id
+userId.shortDescription=User Id expressed as number
+groupId.displayName=Group Id
+groupId.shortDescription=Group Id expressed as number
