--- a/jmeter-ssh-sampler/pom.xml
+++ b/jmeter-ssh-sampler/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.apache.jmeter.protocol.ssh.sampler</groupId>
 	<artifactId>jmeter-ssh-sampler-extra</artifactId>
-	<version>1.1.2-SNAPSHOT</version>
+	<version>1.1.2-RELEASE</version>
 	<packaging>jar</packaging>
 
 	<name>ApacheJMeter_ssh</name>
@@ -98,10 +98,10 @@
 						<artifactItem>
 							<groupId>org.apache.jmeter.protocol.ssh.sampler</groupId>
 							<artifactId>jmeter-ssh-sampler-extra</artifactId>
-							<version>1.1.2-SNAPSHOT</version>
+							<version>1.1.2-RELEASE</version>
 							<type>jar</type>
 							<overWrite>true</overWrite>
-							<outputDirectory>C:\Users\id093108\Documents\_NPVR_Halo_Dynamic\jmeter3\apache-jmeter-3.1\lib\ext</outputDirectory>
+							<outputDirectory>${jmeter_base_dir}\lib\ext</outputDirectory>
 							<!-- <destFileName>optional-new-name.jar</destFileName> -->
 						</artifactItem>
 					</artifactItems>
@@ -122,7 +122,7 @@
 								<exec executable="cmd.exe" spawn="true">
 									<arg value="/c" />
 									<arg
-										value="C:\Users\id093108\Documents\_NPVR_Halo_Dynamic\jmeter3\apache-jmeter-3.1\bin\jmeter.bat" />
+										value="${jmeter_base_dir}\bin\jmeter.bat" />
 								</exec>
 							</target>
 						</configuration>
