changed references to groupid artefact id etc

--- a/jmeter-ssh-sampler/pom.xml
+++ b/jmeter-ssh-sampler/pom.xml
@@ -1,7 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 	<groupId>org.apache.jmeter.protocol.ssh.sampler</groupId>
 	<artifactId>jmeter-ssh-sampler-extra</artifactId>
 	<version>1.1.2-RELEASE</version>
@@ -14,9 +16,6 @@
 		<tag>HEAD</tag> </scm> <issueManagement> <url>https://github.com/yciabaud/jmeter-ssh-sampler/issues</url> 
 		<system>GitHub Issues</system> </issueManagement> -->
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
 
 	<dependencies>
 		<dependency>
@@ -96,10 +95,10 @@
 				<configuration>
 					<artifactItems>
 						<artifactItem>
-							<groupId>org.apache.jmeter.protocol.ssh.sampler</groupId>
-							<artifactId>jmeter-ssh-sampler-extra</artifactId>
-							<version>1.1.2-RELEASE</version>
-							<type>jar</type>
+							<groupId>${project.groupId}</groupId>
+							<artifactId>${project.artifactId}</artifactId>
+							<version>${project.version}</version>
+							<type>${project.type}</type>
 							<overWrite>true</overWrite>
 							<outputDirectory>${jmeter_base_dir}\lib\ext</outputDirectory>
 							<!-- <destFileName>optional-new-name.jar</destFileName> -->
