changed display strings to say ssh session

--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/CloseSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/CloseSSHSessionSamplerResources.properties
@@ -13,7 +13,7 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 displayName=SSH Close Named Session
-connectionManagement.displayName=Connection Management
+connectionManagement.displayName=Session Management
 connectionManagement.shortDescription=Parameters of the Named SSH connection
-connectionName.displayName=SSH Connection Name
+connectionName.displayName=SSH Session Name
 connectionName.shortDescription=Name of the persistent SSH session to close
