--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/OpenSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/OpenSSHSessionSamplerResources.properties
@@ -13,7 +13,7 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Open Named Connection
+displayName=SSH Open Named Session
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
