--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHCommandSamplerExtraResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHCommandSamplerExtraResources.properties
@@ -13,7 +13,7 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 
-displayName=SSH Open Named Connection And Send Command On Exec Channel
+displayName=SSH Open Named Session And Send Command On Exec Channel
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -40,13 +40,13 @@ printStdErr.shortDescription=Prints the standard error output in the results
 #user.displayName=Login
 #keyFile.displayName=Client certificate
 #execute.displayName=Execute
-connectionManagement.displayName=Connection Management
-closeConnection.displayName=Close connection after sampler end
+connectionManagement.displayName=Session Management
+closeConnection.displayName=Close session after sampler end
 closeConnection.shortDescription=If set to true the SSH session is closed after the sampler has finished
 tunnels.displayName=Set up tunnels
 tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH sessions
-connectionName.displayName=SSH Connection name
+connectionName.displayName=SSH Session name
 connectionName.shortDescription=Name of the SSH session to persist if 'Close connection after sampler end' is true
-sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
-sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
+sessionKeepAliveSeconds.displayName=Session KeepAlive Seconds
+sessionKeepAliveSeconds.shortDescription=How long the SSH session must be kept open if there is no traffic (in seconds)
 
