--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHPersistentShellSendCommandSamplerResources.properties
@@ -13,8 +13,8 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 displayName=SSH Persistent Shell Channel Send Command
-connectionManagement.displayName=Connection Management
-connectionName.displayName=SSH Connection Name
+connectionManagement.displayName=Session Management
+connectionName.displayName=SSH Session Name
 connectionName.shortDescription=Name of the persistent SSH session
 shellName.displayName=Persistent Shell Name
 shellName.shortDescription=Name of the persistent Shell channel to send the command on 
@@ -27,5 +27,4 @@ stripPrompt.displayName=Strip Prompt
 stripPrompt.shortDescription=If true remove the OS prompt from the response
 resultEncoding.displayName=Character Encoding
 resultEncoding.shortDescription=Character encoding with which the server sends the response (e.g UTF-8)
-
 resultProcessing.displayName=Sampler Result Handling
