--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHSFTPSamplerExtraResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHSFTPSamplerExtraResources.properties
@@ -12,7 +12,7 @@
 #   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
-displayName=SSH Open Named Connection And Action On SFTP Channel
+displayName=SSH Open Named Sessions And Action On SFTP Channel
 username.displayName=User Name
 username.shortDescription=User Name used to log in to server
 password.displayName=Password
@@ -27,8 +27,8 @@ sshkeyfile.displayName=SSH Key File
 sshkeyfile.shortDescription=File that stores your SSH key (id_dsa)
 passphrase.displayName=Passphrase
 passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext) to open the ssh key
-connectionTimeout.displayName=Connection Timeout
-connectionTimeout.shortDescription=Time to wait before failing connection (ms)
+connectionTimeout.displayName=Session Timeout
+connectionTimeout.shortDescription=Time to wait before failing session (ms)
 destination.displayName=Destination path
 destination.shortDescription=Destination path of the transfer (can be either local or on the server)
 fileTransfer.displayName=File Transfer
@@ -41,12 +41,12 @@ put.displayName=PUT
 #keyFile.displayName=Client certificate
 printFile.displayName=Print file content
 printFile.shortDescription=Reads the file and show the text in the result
-connectionManagement.displayName=Connection Management
-closeConnection.displayName=Close connection after sampler end
+connectionManagement.displayName=Session Management
+closeConnection.displayName=Close session after sampler end
 closeConnection.shortDescription=If set to true the SSH session is closed after the sampler has finished
 tunnels.displayName=Set up tunnels
 tunnels.shortDescription=Set up tunnels or reverse tunnels, syntax [L|R]:port:host:port, only use for persistent named SSH sessions
 connectionName.displayName=SSH Connection name
-connectionName.shortDescription=Name of the SSH connection to persist if 'Close connection after sampler end' is true
+connectionName.shortDescription=Name of the SSH session to persist if 'Close session after sampler end' is true
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
-sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
+sessionKeepAliveSeconds.shortDescription=How long the SSH session must be kept open if there is no traffic (in seconds)
