--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/DumpSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/DumpSSHSessionSamplerResources.properties
@@ -14,11 +14,11 @@
 #   limitations under the License.
 
 displayName=SSH Dump Sessions
-connectionManagement.displayName=Connection Management
-connectionManagement.shortDescription=Parameters of the Named SSH connection
-connectionName.displayName=SSH Connection Name
-connectionName.shortDescription=Name of the persistent SSH connection, leave empty in order to dump all
+connectionManagement.displayName=Session Management
+connectionManagement.shortDescription=Parameters of the Named SSH session
+connectionName.displayName=SSH Session Name
+connectionName.shortDescription=Name of the persistent SSH session, leave empty in order to dump all
 dumpChannelInfo.displayName=Dump open SFTP and Shell channel names
-dumpChannelInfo.shortDescription=If true all names of the SFTP and Shell channels opened on the SSH connections are shown in the result
+dumpChannelInfo.shortDescription=If true all names of the SFTP and Shell channels opened on the SSH sessions are shown in the result
 dumpParameters.displayName=Dump Parameters
 dumpParameters.shortDescription=configure details of how to dump the SSH channels
