--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentSFTPSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SSHOpenPersistentSFTPSamplerResources.properties
@@ -13,11 +13,11 @@
 #   See the License for the specific language governing permissions and
 #   limitations under the License.
 displayName=SSH Open Persistent Named SFTP Channel
-connectionManagement.displayName=Connection Management
-connectionName.displayName=SSH Connection Name
-connectionName.shortDescription=Name of the persistent SSH connection
+connectionManagement.displayName=Session Management
+connectionName.displayName=SSH Session Name
+connectionName.shortDescription=Name of the persistent SSH session
 sftpSessionName.displayName=Persistent SFTP channel Name
-sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH connection
+sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH session
 resultProcessing.displayName=Sampler Result Handling
 resultEncoding.displayName=Character Encoding
 resultEncoding.shortDescription=character encoding of the result e.g. UTF-8
