--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendCommandSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendCommandSSHSessionSamplerResources.properties
@@ -14,8 +14,8 @@
 #   limitations under the License.
 
 displayName=SSH Send Command Via Exec Channel On Named SSH Session
-connectionManagement.displayName=Connection Management
-connectionName.displayName=SSH Connection Name
-connectionName.shortDescription=Name of the Persistent SSH connection
+connectionManagement.displayName=Session Management
+connectionName.displayName=SSH Session Name
+connectionName.shortDescription=Name of the Persistent SSH session
 command.displayName=Command
-command.shortDescription=Command to execute over the Exec channel on the persistent named SSH connection (do not send commands that require input)
+command.shortDescription=Command to execute over the Exec channel on the persistent named SSH session (do not send commands that require input)
