--- a/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
+++ b/jmeter-ssh-sampler/src/main/resources/org/apache/jmeter/protocol/ssh/sampler/SendSFTPCommandSSHSessionSamplerResources.properties
@@ -27,7 +27,7 @@ sshkeyfile.displayName=SSH Key File
 sshkeyfile.shortDescription=File that stores your SSH key (id_dsa)
 passphrase.displayName=Passphrase
 passphrase.shortDescription=id_dsa passphrase (Warning: Cleartext)
-connectionTimeout.displayName=Connection Timeout
+connectionTimeout.displayName=Session Timeout
 connectionTimeout.shortDescription=Time to wait before failing connection (ms)
 destination.displayName=Destination path
 destination.shortDescription=Destination path of the transfer (can be either local or on the server)
@@ -41,16 +41,16 @@ put.displayName=PUT
 #keyFile.displayName=Client certificate
 printFile.displayName=Print file content
 printFile.shortDescription=Reads the file and show the text in the result
-connectionManagement.displayName=Connection Management
-closeConnection.displayName=Close connection after sampler end
+connectionManagement.displayName=Session Management
+closeConnection.displayName=Close session after sampler end
 tunnels.displayName=Set up tunnels
 tunnels.displayName=
-connectionName.displayName=SSH Connection Name
-connectionName.shortDescription=Name of the Persistent SSH connection
+connectionName.displayName=SSH Session Name
+connectionName.shortDescription=Name of the Persistent SSH session
 sessionKeepAliveSeconds.displayName=Connection KeepAlive Seconds
-sessionKeepAliveSeconds.shortDescription=How long the SSH connection must be kept open if there is no traffic (in seconds)
+sessionKeepAliveSeconds.shortDescription=How long the SSH session must be kept open if there is no traffic (in seconds)
 sftpSessionName.displayName=Persistent SFTP channel Name
-sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH connection
+sftpSessionName.shortDescription=Persistent SFTP channel Name on the named SSH session
 fileProperties.displayName=File Properties
 fileProperties.shortDescription=File properties for chon, chgrp, and chmod use integer values only
 permissions.displayName=File Permissions 
